minikube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: jdbc:mysql://db:3306/db
            - name: DB_PASSWORD
              value: dbuser
            - name: DB_USER
              value: dbuser
          image: docker.io/steramachi/backend:latest
          name: backend
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
