minikube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: NEXTAUTH_URL
              value: http://frontend:3000
            - name: NEXT_PUBLIC_AUTH_SECRET
              value: your-256-bit-secret
            - name: NEXT_PUBLIC_BASE_URL
              value: http://backend:9000
          image: docker.io/steramachi/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
