minikube/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ingress
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30001  # 任意のNodePortを設定
